CProgrammierung/eval_pipline/resources/testcases/bad/fail_invalid_start_node.stdin
i4jl5xtiqbb4tl:tji5yzpa88f0yn,m7tm54e49epxq7bl0,v3brrgyph
dlt5ywif9tr1yyy:i4jl5xtiqbb4tl,e855tiofl,v3brrgyph,tji5yzpa88f0yn
bobf4fky4f7:dlt5ywif9tr1yyy,e855tiofl,i4jl5xtiqbb4tl,bym9r,w6yp2o8u7,tji5yzpa88f0yn-391
e855tiofl:i4jl5xtiqbb4tl,w6yp2o8u7,p9gfe74hmn
bym9r:e855tiofl,w6yp2o8u7,dlt5ywif9tr1yyy,p9gfe74hmn,zyiu4zceu8n88qv
w6yp2o8u7:zyiu4zceu8n88qv
p9gfe74hmn:w6yp2o8u7,zyiu4zceu8n88qv,w17dsdz686k07g00uk,u9ctv1kanj5pv96ff
w17dsdz686k07g00uk:zyiu4zceu8n88qv,w6yp2o8u7
u9ctv1kanj5pv96ff:w17dsdz686k07g00uk,zyiu4zceu8n88qv-793
ifybievhl1b:u9ctv1kanj5pv96ff,zyiu4zceu8n88qv,w17dsdz686k07g00uk
7lk3blzpnesj:ifybievhl1b,9ad6e3unf7d,w17dsdz686k07g00uk,u9ctv1kanj5pv96ff,quy4ejnid6ya8fb
9ad6e3unf7d:u9ctv1kanj5pv96ff,ifybievhl1b,quy4ejnid6ya8fb,yn2ges9wltemqwrs
6bijk24:9ad6e3unf7d,quy4ejnid6ya8fb,ifybievhl1b,7lk3blzpnesj,yn2ges9wltemqwrs,fghtacvrqe
quy4ejnid6ya8fb:yn2ges9wltemqwrs
fghtacvrqe:yn2ges9wltemqwrs,quy4ejnid6ya8fb,n4v2ap2613ngh
6e9fxj7s650wg:fghtacvrqe,a1nyg9o3,quy4ejnid6ya8fb,yn2ges9wltemqwrs,n4v2ap2613ngh,rmrapz0cf
a1nyg9o3:n4v2ap2613ngh,yn2ges9wltemqwrs,fghtacvrqe,rmrapz0cf,tgps5w8nd07yytsd1o8l
n4v2ap2613ngh:rmrapz0cf,tgps5w8nd07yytsd1o8l
rmrapz0cf:tgps5w8nd07yytsd1o8l,x1a0n55
tgps5w8nd07yytsd1o8l:x1a0n55
2xcz6fryna2hha6jy6g4:tgps5w8nd07yytsd1o8l,x1a0n55,n4v2ap2613ngh,rmrapz0cf,dwvp6cdwb72l6a6,ggy2cd
dwvp6cdwb72l6a6:x1a0n55,ggy2cd,tgps5w8nd07yytsd1o8l
ggy2cd:x1a0n55,q09yvivt0jux
15x4hci6x5:ggy2cd,71ln6z,x1a0n55,dwvp6cdwb72l6a6,q09yvivt0jux,2ngsk7f7akdy984
71ln6z:q09yvivt0jux,dwvp6cdwb72l6a6,ggy2cd
2ngsk7f7akdy984:q09yvivt0jux,71ln6z,m7nwweiqggi
1csnpbg91zzh0eqj1o:2ngsk7f7akdy984,m7nwweiqggi,71ln6z,q09yvivt0jux,26fy4mkup77szs2srg1u,yio003cz3cgu3diry
m7nwweiqggi:q09yvivt0jux,yio003cz3cgu3diry
26fy4mkup77szs2srg1u:m7nwweiqggi,yio003cz3cgu3diry,2ngsk7f7akdy984,lq1ur,sq39vr
lq1ur:yio003cz3cgu3diry,sq39vr,m7nwweiqggi,u1hprnw
sq39vr:u1hprnw,yio003cz3cgu3diry
u1hprnw:yio003cz3cgu3diry
ddjxg63empnfi:u1hprnw,g6das03mlhn,lq1ur,sq39vr,iucbgqg,m7tm54e49epxq7bl0
g6das03mlhn:iucbgqg,sq39vr,u1hprnw,m7tm54e49epxq7bl0,v3brrgyph
iucbgqg:m7tm54e49epxq7bl0,u1hprnw,v3brrgyph,tji5yzpa88f0yn
m7tm54e49epxq7bl0:v3brrgyph,tji5yzpa88f0yn
tji5yzpa88f0yn:v3brrgyph
A:jvz07lgrl1
I:59
